# archmind

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
.archmind/: store.db
.claude/: settings.local.json
.github/workflows/: docs.yml  release.yml  server.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: db.rs  embed.rs  evolution.rs  index.rs  lib.rs  model.rs  project.rs  search.rs  store.rs
core/src/analyzers/: config.rs  csharp.rs  database.rs  deps.rs  docker_compose.rs  git.rs  java.rs  kubernetes.rs  mod.rs  openapi.rs  stats.rs  treesitter.rs
core/src/assistant/: claude.rs  mod.rs  ollama.rs
core/src/diagrams/: dot.rs  mermaid.rs  mod.rs  plantuml.rs
core/src/docs/: html.rs  markdown.rs  mod.rs  pdf.rs  wiki.rs
core/tests/: smoke.rs
docs/: ARCHITECTURE.md  PROJECT.md
docs/diagrams/: class.mmd  component.mmd  dependency.mmd  er.mmd  flow.mmd  sequence.mmd
packaging/: PKGBUILD  archmind.desktop
server/: Cargo.toml
server/src/: main.rs
src/: App.svelte  app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatView.svelte  Diagrams.svelte  DocsView.svelte  EvolutionView.svelte  Overview.svelte  SearchView.svelte  Sidebar.svelte  Tables.svelte
src/lib/: api.js  state.svelte.js
