# Crate "core": tutta la logica di analisi, riutilizzabile e senza Tauri.
# Solo dipendenze pure-Rust (niente librerie di sistema) per pacchettizzare
# senza attriti su Linux, Windows e macOS.
[package]
name = "archmind-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML per Docker Compose, manifest Kubernetes e OpenAPI in formato yaml.
serde_yaml = "0.9"
# Estrazione euristica di simboli (classi, package, import, DDL) dal sorgente.
regex = "1"
thiserror = "2"
tree-sitter = "0.26.9"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-java = "0.23.5"
tantivy = "0.26.1"
ureq = { version = "3.3.0", features = ["json"] }
ignore = "0.4.26"
rusqlite = { version = "0.40.1", features = ["bundled"] }
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
genpdf = "0.2.0"
postgres = "0.19.14"
fastembed = { version = "5.17.2", optional = true }
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"

[dev-dependencies]
tempfile = "3"

[features]
# Retrieval semantico locale via embeddings ONNX (fastembed). Off di default:
# l'app e la CLI restano puro-Rust e la release multipiattaforma non cambia.
# Abilitalo con:  cargo build --features embeddings
embeddings = ["dep:fastembed"]
