# Server REST headless di ArchMind (uso team/Enterprise): espone il core su HTTP
# con registro multi-progetto (portfolio), auth API-key + RBAC e audit log.
[package]
name = "archmind-server"
version = "0.1.0"
edition = "2021"
description = "Server REST di ArchMind: analisi e documentazione per team"
license = "MIT"

[[bin]]
name = "archmind-server"
path = "src/main.rs"

[dependencies]
archmind-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
sha2 = "0.10"
rand = "0.8"
